--- a/code/vue-app-base/package.json
+++ b/code/vue-app-base/package.json
@@ -14,19 +14,26 @@
   "devDependencies": {
     "@babel/core": "^7.10.3",
     "@babel/preset-env": "^7.10.3",
+    "@vue/cli-plugin-babel": "^4.4.6",
+    "autoprefixer": "^9.8.4",
     "babel-loader": "^8.1.0",
+    "babel-preset-es2015": "^6.24.1",
     "copy-webpack-plugin": "^6.0.2",
     "css-loader": "^3.6.0",
     "dev-server": "^0.1.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
+    "less-loader": "^6.1.2",
     "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^8.0.2",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^4.1.0",
+    "vue-cli": "^2.9.6",
     "vue-loader": "^15.9.3",
+    "vue-template-compiler": "^2.6.11",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
