--- a/code/vue-app-base/package.json
+++ b/code/vue-app-base/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "serve": "webpack-dev-server --config ./webpack.dev.js --env development --host 0.0.0.0",
-    "build": "echo \"请使用 Webpack 实现此任务\"",
-    "lint": "echo \"请使用 ESLint 实现此任务\""
+    "build": "npm run elint && webpack --config ./webpack.prod.js --env production",
+    "lint": "npm run elint",
+    "elint": "eslint ./src/**/*.vue ./src/**/*.js"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -16,11 +17,21 @@
     "@babel/preset-env": "^7.10.3",
     "@vue/cli-plugin-babel": "^4.4.6",
     "autoprefixer": "^9.8.4",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "babel-preset-env": "^1.7.0",
     "copy-webpack-plugin": "^6.0.2",
     "css-loader": "^3.6.0",
     "dev-server": "^0.1.0",
+    "eslint": "^7.3.1",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-vue": "^6.2.2",
+    "eslint-standard": "^1.0.2",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "less-loader": "^6.1.2",
